--- a/presentation/index.html
+++ b/presentation/index.html
@@ -1,25 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>table</title>
-</head>
-<body>
-    <table border="1">
-  <tr>
-    <th>Fruit</th>
-    <th>Color</th>
-  </tr>
-  <tr>
-    <td>Apple</td>
-    <td>Red</td>
-  </tr>
-  <tr>
-    <td>Banana</td>
-    <td>Yellow</td>
-  </tr>
-</table>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <style>
+      section {
+        display: grid;
+        grid-template-rows: 250px 250px 250px;
+        grid-template-columns: 250px 250px 250px;
+        column-gap: 4px;
+        row-gap: 4px;
+      }
+      .box {
+        border: 2px solid red;
+      }
+      .box img {
+        height: 100%;
+        width: 100%;
+      }
+      #img1{
+         grid-row-start: 1;
+         grid-row-end: 3;
 
-</body>
+      }
+      #img3{
+       grid-row-start:2 ;
+       grid-row-end: 4;
+      }
+    </style>
+  </head>
+  <body>
+    <section>
+      <div class="box" id="img1" title="img1">
+        <img src="./asets/img/logo purple.png" alt="" />
+      </div>
+      <div class="box" id="img2" title="img2">
+        <img src="./asets/img/logo purple.png" alt="" />
+      </div>
+      <div class="box" id="img3" title="img3">
+        <img src="./asets/img/logo purple.png" alt="" />
+      </div>
+      <div class="box" id="img4" title="img4">
+        <img src="./asets/img/logo purple.png" alt="" />
+      </div>
+      <div class="box" id="img5" title="img5">
+        <img src="./asets/img/logo purple.png" alt="" />
+      </div>
+    </section>
+  </body>
 </html>
